3tier-web-application/VPC/eip.tf
# Elastic IP 생성
resource "aws_eip" "terraform-NAT-eip" {   
    vpc      = true
    tags = {
        Name = "terraform-NAT-eip"
  }
}
