3tier-web-application/VPC/vpc.tf
# vpc 생성
resource "aws_vpc" "terraform_vpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
    Name = "terraform_vpc"
    }
}
